框架主配置入口的设计与实践

--- a/latte-ec/build.gradle
+++ b/latte-ec/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':latte-core')
+    //noinspection GradleDeprecatedConfiguration
+    compile project(':latte-core')
 
 }
