--- a/example/build.gradle
+++ b/example/build.gradle
@@ -25,8 +25,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':latte-ec')
+    //noinspection GradleDeprecatedConfiguration
+    compile project(':latte-ec')
     annotationProcessor(':latte-compiler')
-
 
 }
