--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     
@@ -8,16 +7,14 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-rc01'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.6.4'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         
